# writr

./: .gitignore  .prettierrc  .travis.yml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  circle.yml  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vitest.config.mjs  vitest.config.ts  vitest.harness.config.ts  vitest.integration.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CodeQL.yml  ai-integration-tests.yml  build.yml  code-coverage.yml  code-ql.yml  codeql.yml  deploy-site.yml  release.yaml  release.yml  tests.yml  writr-rs.yml
__mocks__/: inquirer.ts
benchmark/: benchmark-contents.ts  benchmark-minimal.ts  benchmark-rust.ts  benchmark-standard.ts  benchmark.ts
blog_example/: article-complex.md  article-unpublished.md  article1-simple.md  article1.md  article2.md  big-content.md  config.json  permalink-test.md
blog_example/templates/: index.hjs  post.hjs  post2.hjs  tag.hjs
blog_output/: index.html
blog_output/all-about-the-tesla-model-3/: index.html
blog_output/article-simple/: index.html
blog_output/big-content-is-real/: index.html
blog_output/the-largest-whale/: index.html
express/: index.ts
init/: article-ejs.md  article1-simple.md  article2.md  config.json  writr.config.cjs  writr.config.js  writr.config.ts
site/: README.md  docula.config.cjs  docula.config.mjs  docula.config.ts  variables.css  writr.config.cjs  writr.config.ts
src/: builder.ts  cache.ts  config.ts  console.ts  generator.ts  github.ts  helpers.ts  index.ts  log.ts  migrate.ts  options.ts  post.ts  serve.ts  tag.ts  translate.ts  types.ts  writr-ai-cache.ts  writr-ai-types.ts  writr-ai.ts  writr-cache.ts  writr-frontmatter.ts  writr.ts
template/: index.hbs  releases.hbs
test/: article.ts  atomProvider.test.ts  build.test.ts  builder.test.ts  cache.test.ts  cacheService.test.ts  config.test.ts  console.test.ts  content-fixtures.ts  dataCacheService.test.ts  dataService.test.ts  examples.test.ts  fileDataProvider.test.ts  frontmatter-fixtures.ts  generator.test.ts  github.test.ts  helpers.test.ts  htmlProvider.test.ts  imageProvider.test.ts  index.test.ts  index.ts  jsonProvider.test.ts  log.test.ts  memoryCacheProvider.test.ts  migrate.test.ts  mocha.opts  options.test.ts  post.test..ts  post.test.ts  post.ts  serve.test.ts  tag.test.ts  tag.ts  tsconfig.mocha.js  writr-ai-integration.test.ts  writr-ai.test.ts  writr-cache.test.ts  writr-frontmatter.test.ts  writr-hooks.test.ts  writr-render.test.ts  (+1 more)
writr-rs/: .gitignore  COVERAGE.md  Cargo.toml  KNOWN-DIVERGENCES.md  README.md
writr-rs/crates/writr-conformance/: Cargo.toml
writr-rs/crates/writr-conformance/src/: lib.rs
writr-rs/crates/writr-conformance/tests/: goldens.rs  reporting.rs
writr-rs/crates/writr-core/: Cargo.toml
writr-rs/crates/writr-core/benches/: pipeline.rs
writr-rs/crates/writr-core/examples/: profile.rs
writr-rs/crates/writr-core/src/: error.rs  frontmatter.rs  js.rs  lib.rs  options.rs  pipeline.rs  slugger.rs
writr-rs/crates/writr-core/src/hast/: from_mdast.rs  highlight.rs  katex.rs  mod.rs  property_info.rs  raw.rs  slug.rs  to_html.rs
writr-rs/crates/writr-core/src/mdast_util/: emoji.rs  gfm_autolink.rs  mod.rs  toc.rs
writr-rs/crates/writr-core/tests/: api.rs  hljs_fixtures.rs  render_oracle.rs
writr-rs/crates/writr-core/tests/fixtures/: hljs-corpus.jsonl  render-cases.jsonl
writr-rs/crates/writr-hljs/: Cargo.toml
writr-rs/crates/writr-hljs/grammars/: bash.json  c.json  cpp.json  csharp.json  css.json  diff.json  go.json  graphql.json  ini.json  java.json  javascript.json  json.json  kotlin.json  less.json  lua.json  makefile.json  markdown.json  objectivec.json  perl.json  php-template.json  php.json  plaintext.json  python-repl.json  python.json  r.json  ruby.json  rust.json  scss.json  shell.json  sql.json  swift.json  typescript.json  vbnet.json  wasm.json  xml.json  yaml.json
writr-rs/crates/writr-hljs/src/: compile.rs  engine.rs  lib.rs  raw.rs  regex_js.rs  registry.rs  tree.rs
writr-rs/crates/writr-hljs/tests/: engine_paths.rs
writr-rs/crates/writr-katex/: Cargo.toml
writr-rs/crates/writr-katex/src/: lib.rs
writr-rs/crates/writr-katex/tests/: render_paths.rs
writr-rs/crates/writr-node/: Cargo.toml  browser.js  browser.mjs  build.rs  index.d.ts  index.js  package.json  pnpm-lock.yaml  writr-node.wasi-browser.js  writr-node.wasi-browser.mjs  writr-node.wasi.cjs
writr-rs/crates/writr-node/src/: lib.rs
writr-rs/tools/: browser-smoke.mjs  build-pgo.mjs  build-wasm.mjs  copy-node-artifact.mjs  gen-all.mjs  gen-emoji-table.mjs  gen-hljs-fixtures.mjs  gen-hljs-grammars.mjs  gen-property-info.mjs  gen-slugger-data.mjs  gen-unicode-data.mjs  pinned.mjs
(+1437 files in other folders)
