[workspace]
resolver = "2"
members = [
	"crates/writr-core",
	"crates/writr-conformance",
	"crates/writr-hljs",
	"crates/writr-katex",
	"crates/writr-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jaredwray/writr"
rust-version = "1.85"

[workspace.dependencies]
markdown = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[profile.release]
lto = "thin"
codegen-units = 1

# Vendored with a to_mdast virtual-space fix — see vendor/markdown/VENDORED.md.
[patch.crates-io]
markdown = { path = "vendor/markdown" }
