[package]
name = "writr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust markdown engine for writr — byte-compatible with the unified/remark/rehype pipeline"

[features]
default = ["gfm", "toc", "emoji", "math", "mdx", "raw-html", "slug", "highlight"]
gfm = []
toc = []
emoji = []
math = []
mdx = []
raw-html = ["dep:html5ever"]
slug = []
highlight = ["dep:writr-hljs"]

[dependencies]
html5ever = { version = "0.39.0", optional = true }
markdown = { workspace = true }
writr-hljs = { path = "../writr-hljs", optional = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
