[package]
name = "writr-katex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "KaTeX 0.16.45 for writr-rs — the real katex.min.js on an embedded QuickJS"

[dependencies]
rquickjs = { version = "0.12", features = ["classes"] }
