[package]
name = "writr-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Node.js bindings (napi-rs) for the writr-rs markdown engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"
writr-core = { path = "../writr-core" }
serde_json = { workspace = true }
markdown = { workspace = true, features = ["serde"] }

# Multi-core `renderBatch` on native targets; the wasm32 build stays
# sequential (single-threaded emnapi, see build.rs).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
writr-core = { path = "../writr-core", features = ["parallel"] }

[build-dependencies]
napi-build = "2"
